updating chat message order

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@langchain/community": "^0.2.13",
     "@langchain/core": "^0.2.13",
+    "@langchain/ollama": "^0.0.3",
     "@langchain/openai": "^0.2.0",
     "@types/express": "^4.17.21",
     "@types/puppeteer": "^7.0.4",
@@ -33,7 +34,9 @@
     "styled-components": "^6.1.12",
     "typescript": "^5.4.5",
     "uuidv4": "^6.2.13",
-    "ws": "^8.17.0"
+    "ws": "^8.17.0",
+    "zod": "^3.23.8",
+    "zod-to-json-schema": "^3.23.2"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
