--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "chrono-node": "^2.7.6",
     "express": "^4.19.2",
     "langchain": "^0.2.6",
+    "lda": "^0.2.0",
     "obsidian": "^1.5.7-1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -31,6 +32,7 @@
     "react-tabs": "^6.0.2",
     "remark-gfm": "^4.0.0",
     "request": "^2.88.2",
+    "stopword": "^3.0.1",
     "styled-components": "^6.1.12",
     "typescript": "^5.4.5",
     "uuidv4": "^6.2.13",
